[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/PlayerUI/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/CompassPro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/PlayerUI/PowerUps/PowerUps.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=13]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[node name="PauseMenu" type="Label"]
visible = false
margin_left = 272.0
margin_top = 126.0
margin_right = 368.0
margin_bottom = 156.0
grow_horizontal = 2
custom_fonts/font = SubResource( 13 )
text = "PAUSED"
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -32.0
margin_right = 128.0
margin_bottom = 120.0
grow_horizontal = 2
mouse_filter = 2
color = Color( 0, 0, 0, 0.419608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMenu" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 39.0
margin_right = 88.0
margin_bottom = 104.0
grow_horizontal = 2
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeBtn" type="Button" parent="ButtonMenu"]
margin_right = 80.0
margin_bottom = 15.0
focus_neighbour_top = NodePath("../QuitBtn")
custom_colors/font_color_focus = Color( 1, 0.815686, 0.168627, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.168627, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
text = "Resume"

[node name="OptionsBtn" type="Button" parent="ButtonMenu"]
margin_top = 25.0
margin_right = 80.0
margin_bottom = 40.0
custom_colors/font_color_focus = Color( 1, 0.815686, 0.168627, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.168627, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
text = "Options"

[node name="QuitBtn" type="Button" parent="ButtonMenu"]
margin_top = 50.0
margin_right = 80.0
margin_bottom = 65.0
focus_neighbour_bottom = NodePath("../ResumeBtn")
custom_colors/font_color_focus = Color( 1, 0.815686, 0.168627, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.168627, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
text = "Main Menu"

[node name="PowerUps" parent="." instance=ExtResource( 3 )]

[connection signal="visibility_changed" from="." to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="focus_entered" from="ButtonMenu/ResumeBtn" to="." method="_on_ResumeBtn_focus_entered"]
[connection signal="mouse_entered" from="ButtonMenu/ResumeBtn" to="." method="_on_ResumeBtn_mouse_entered"]
[connection signal="pressed" from="ButtonMenu/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="focus_entered" from="ButtonMenu/OptionsBtn" to="." method="_on_OptionsBtn_focus_entered"]
[connection signal="mouse_entered" from="ButtonMenu/OptionsBtn" to="." method="_on_OptionsBtn_mouse_entered"]
[connection signal="pressed" from="ButtonMenu/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="focus_entered" from="ButtonMenu/QuitBtn" to="." method="_on_QuitBtn_focus_entered"]
[connection signal="mouse_entered" from="ButtonMenu/QuitBtn" to="." method="_on_QuitBtn_mouse_entered"]
[connection signal="pressed" from="ButtonMenu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
